[gd_scene load_steps=24 format=3 uid="uid://s5mawxwdd6pm"]

[ext_resource type="Script" path="res://Scripts/missile_launcher.gd" id="1_0yqax"]
[ext_resource type="PackedScene" uid="uid://djflwyj7putlx" path="res://Scenes/Prefabs/missile_b.tscn" id="2_eifnv"]
[ext_resource type="Texture2D" uid="uid://4y8vk3cdchml" path="res://Assets/MissileLauncher/Outline/sprite_0.png" id="3_2u0c4"]
[ext_resource type="Texture2D" uid="uid://cbek4jriaf162" path="res://Assets/MissileLauncher/sprite_00.png" id="3_nufl8"]
[ext_resource type="Texture2D" uid="uid://c20fn3582cniu" path="res://Assets/MissileLauncher/sprite_01.png" id="4_ct52v"]
[ext_resource type="Texture2D" uid="uid://itm3ggibagkk" path="res://Assets/MissileLauncher/Outline/sprite_1.png" id="4_wa6k7"]
[ext_resource type="Texture2D" uid="uid://bqx6jobs5x6hf" path="res://Assets/MissileLauncher/sprite_02.png" id="5_xdkin"]
[ext_resource type="Texture2D" uid="uid://beiv6p17mg3ec" path="res://Assets/MissileLauncher/Outline/sprite_2.png" id="5_yyk46"]
[ext_resource type="Texture2D" uid="uid://deal61wgq0owp" path="res://Assets/MissileLauncher/Outline/sprite_3.png" id="6_47wlf"]
[ext_resource type="Texture2D" uid="uid://bsy5d0rg3xdk1" path="res://Assets/MissileLauncher/sprite_03.png" id="6_mauvm"]
[ext_resource type="Texture2D" uid="uid://b6xpwt5i7gm5y" path="res://Assets/MissileLauncher/sprite_04.png" id="7_bh6dt"]
[ext_resource type="Texture2D" uid="uid://ceha7wjpbx25x" path="res://Assets/MissileLauncher/sprite_05.png" id="8_gg3eu"]
[ext_resource type="Texture2D" uid="uid://c51puk5x4h1g3" path="res://Assets/MissileLauncher/sprite_06.png" id="9_2jqcw"]
[ext_resource type="Texture2D" uid="uid://doqtn8x2pujiu" path="res://Assets/MissileLauncher/sprite_07.png" id="10_mwiax"]
[ext_resource type="Texture2D" uid="uid://b3le83a7s3to7" path="res://Assets/MissileLauncher/sprite_08.png" id="11_s03df"]
[ext_resource type="Texture2D" uid="uid://bbjkv28i07k44" path="res://Assets/MissileLauncher/sprite_09.png" id="12_msqvl"]
[ext_resource type="Texture2D" uid="uid://bwvptfll8lhmg" path="res://Assets/MissileLauncher/sprite_10.png" id="13_g1cnj"]
[ext_resource type="Texture2D" uid="uid://c84pj64nomb8f" path="res://Assets/MissileLauncher/sprite_11.png" id="14_qn018"]
[ext_resource type="PackedScene" uid="uid://bck7mbvrkfjj7" path="res://Scenes/UI/recharge_bar.tscn" id="19_1d8dd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_oi6df"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2u0c4")
}, {
"duration": 1.0,
"texture": ExtResource("4_wa6k7")
}, {
"duration": 1.0,
"texture": ExtResource("5_yyk46")
}, {
"duration": 1.0,
"texture": ExtResource("6_47wlf")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_bejb3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nufl8")
}, {
"duration": 1.0,
"texture": ExtResource("4_ct52v")
}, {
"duration": 1.0,
"texture": ExtResource("5_xdkin")
}, {
"duration": 1.0,
"texture": ExtResource("6_mauvm")
}, {
"duration": 1.0,
"texture": ExtResource("7_bh6dt")
}, {
"duration": 1.0,
"texture": ExtResource("8_gg3eu")
}, {
"duration": 1.0,
"texture": ExtResource("9_2jqcw")
}, {
"duration": 1.0,
"texture": ExtResource("10_mwiax")
}, {
"duration": 1.0,
"texture": ExtResource("11_s03df")
}, {
"duration": 1.0,
"texture": ExtResource("12_msqvl")
}, {
"duration": 1.0,
"texture": ExtResource("13_g1cnj")
}, {
"duration": 1.0,
"texture": ExtResource("14_qn018")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odsxs"]
size = Vector2(170, 145)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mm2yi"]
bg_color = Color(1, 0.909804, 0.231373, 1)

[node name="MissileLauncher" type="Area2D"]
z_index = 5
z_as_relative = false
script = ExtResource("1_0yqax")
missile = ExtResource("2_eifnv")

[node name="SpriteScaler" type="Node2D" parent="."]
position = Vector2(6, -68)
scale = Vector2(5, 5)

[node name="Outline" type="AnimatedSprite2D" parent="SpriteScaler"]
unique_name_in_owner = true
visible = false
position = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_oi6df")
frame = 1
frame_progress = 0.258006

[node name="Sprite" type="AnimatedSprite2D" parent="SpriteScaler"]
z_index = 1
sprite_frames = SubResource("SpriteFrames_bejb3")
frame = 5
frame_progress = 0.363466

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(6, 19.5)
shape = SubResource("RectangleShape2D_odsxs")

[node name="RechargeBar" parent="." instance=ExtResource("19_1d8dd")]
visible = false
position = Vector2(-53, 93)
scale = Vector2(0.575, 0.575)
color = SubResource("StyleBoxFlat_mm2yi")

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
